# obs-ios-camera-source

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  test.cmd
.github/workflows/: main.yml
CI/: build-macos.sh  download-obs-deps.cmd  install-build-obs-macos.sh  install-build-obs.cmd  install-dependencies-macos.sh  install-ios-camera-dependencies.cmd  install-setup-qt.cmd  package-macos.sh  package-windows.cmd  prepare-windows.cmd
CI/macos/: obs-ios-camera-source.pkgproj  qt.rb
data/locale/: en-US.ini
installer/: installer.iss
src/: DeviceApplicationConnectionController.cpp  DeviceApplicationConnectionController.hpp  FFMpegAudioDecoder.cpp  FFMpegAudioDecoder.h  FFMpegVideoDecoder.cpp  FFMpegVideoDecoder.h  Queue.hpp  Thread.cpp  Thread.hpp  VideoDecoder.h  VideoToolboxVideoDecoder.cpp  VideoToolboxVideoDecoder.h  ffmpeg-decode.c  ffmpeg-decode.h  obs-ios-camera-plugin.cpp  obs-ios-camera-source-win.cpp  obs-ios-camera-source-win.h  obs-ios-camera-source.cpp  obs-ios-camera-source.h
